First Commit Branch 04

--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -9,3 +9,13 @@ appTitle=Employees
 appDescription=A Fiori application.
 #XTIT: Main view title
 title=Employee List
+
+#LABELS
+labelEmployee = Employee Input
+labelCountry = Country
+
+
+#Countries
+CountryUS = United States
+CountryUK = United Kingdom
+CountryES = Spain
