--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -11,7 +11,7 @@ appDescription=A Fiori application.
 title=Employee List
 
 #LABELS
-labelEmployee = Employee Input
+labelEmployee = Employee ID
 labelCountry = Country
 
 
@@ -19,3 +19,53 @@ labelCountry = Country
 CountryUS = United States
 CountryUK = United Kingdom
 CountryES = Spain
+
+#Employees Columns
+tableId = Employee ID
+tableName = Name
+tableCountry = Country
+tableCity = City
+tableShowDetails = Show Details
+
+#Button LABELS
+btnFilter = Filter
+btnClearFilter = Clear
+showCity = Show City
+hideCity = Hide City
+
+#Dynamic Table Columns
+orderID = order ID
+freight = Freight
+shipAddress = Ship Address
+
+#Dialog Orders
+orders= Orders
+closeDialog= Close
+
+
+#Employee Details
+
+employeeDetails= Employee Details
+layout= Layout
+
+#Employee Details
+employeeID= Employee ID
+employeeTitle= Title
+countryCode=Country Code
+city=City
+postalCode= Postal Code
+
+#Incidende
+incedence=Incidence
+europe= Europe
+us= United State
+create= Create incidence
+incidenceDate= Incidence Date
+incidenceReason = Incidence Reason
+incidenceType= Incidence type
+incidenceCorrect= Correct
+incidencePending= Pending
+incidenceError = Error
+today= Today
+yesterday= yesterday
+tomorrow= Tomorrow
